# Projekt_silnik

./: CMakeLists.txt
Data/Shaders/: Grayscale.fs  SwimmerColor.vs
Libs/: CMakeLists.txt
Source/: CMakeLists.txt  Context.h  Game.cpp  Game.h  Main.cpp  Sources.cmake  UserGame.hpp
Source/Game/: Component.h  Entity.cpp  Entity.h  Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  PhysicsWorld.h  World.cpp  World.h
Source/Game/Components/: PhysicsBoxComponent.hpp  PhysicsCircleComponent.hpp  SpinComponent.hpp  SpriteComponent.hpp  SwimmerComponent.hpp
Source/Input/: Input.cpp  Input.h  InputCodes.h
Source/Visuals/: AnimatedSprite.cpp  AnimatedSprite.h  CLAMP.h
